# info-698-hybrid-rag

docs/: Architecture.docx  Project_Proposal.docx  Project_Workload.xlsx
documentations/: Project_Workload.xlsx
src/info698/: data_collector.py  graph_builder.py  main.py  pdf_loading.py  pyproject.toml  requirements.txt
src/info698/data/: citations.json
